0-prepare-deployment/gateway-servicea.yaml
# Copyright 2019 iPao Authors
#
#   Unless required by applicable law or agreed to in writing, software
#   distributed under the License is distributed on an "AS IS" BASIS,
#   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#   See the License for the specific language governing permissions and
#   limitations under the License.

##################################################################################################
# External Gateway for service A
##################################################################################################
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: servicea-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "servicea.co.th"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: servicea-external
spec:
  hosts:
  - "servicea.co.th"
  gateways:
  - servicea-gateway
  http:
  - route:
    - destination:
        host: servicea
        port:
          number: 1323
