0-prepare-deployment/virtualsvc-serviceb.yaml
# Copyright 2017 iPao Authors
#
#   Unless required by applicable law or agreed to in writing, software
#   distributed under the License is distributed on an "AS IS" BASIS,
#   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#   See the License for the specific language governing permissions and
#   limitations under the License.

##################################################################################################
# Create Virtual Service for Service B
##################################################################################################
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: serviceb-internal
spec:
  hosts:
  - serviceb
  http:
  - route:
    - destination:
        host: serviceb
        port:
          number: 1323
#        subset: v1
      headers:
        request:
          add:
            "X-Service-Name" : "Service B"
